Adding information / documentation in markdown

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -8,8 +8,12 @@
     <body>
         <h1>"HTML5" Clients Interacting Demos</h1>
         <p>
-            These are small demos on two or more clients interacting with each other. Many of the demos has a recorder
-            and a screen. The recorder are intended to be used as a "remote" to control whats going on on the "screen".
+            These are small demos using two or more clients interacting with each other in real time. Most demos has a recorder
+            and a screen. The recorder are used as a "remote control" to control whats going on on the remote "screen".
+            These demos does show some new and experimental parts in browsers using native implementations so each demo might
+            require different browser versions / experimental browser builds.
+        </p>
+        <p>
             When using a demo with both a recorder and a screen, open the recorder in the client (device) which shall be
             the controlling part and the screen in the client which shall be the controlled part.
         </p>
