Fixing terminology and added some more documentation

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -35,7 +35,7 @@
             WebSocket connection.
         </p>
         <p>
-            <a href="instant_camera/recorder.html">Open recorder</a> - <a href="instant_camera/screen.html">Open screen</a>
+            <a href="instant_camera/remote.html">Open recorder</a> - <a href="instant_camera/receiver.html">Open screen</a>
         </p>
 
         <hr>
@@ -46,7 +46,7 @@
             a image in a screen client. Communication between the clients are done with WebSockets.
         </p>
         <p>
-            <a href="remote_rotation/recorder.html">Open recorder</a> - <a href="remote_rotation/screen.html">Open screen</a>
+            <a href="remote_rotation/remote.html">Open recorder</a> - <a href="remote_rotation/receiver.html">Open screen</a>
         </p>
     </body>
 </html>
