--- a/src/www/instant_camera/receiver.html
+++ b/src/www/instant_camera/receiver.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-        <title>Instant Camera - Screen</title>
+        <title>Instant Camera - Receiver</title>
         <style>
             img { float: left; margin-right: 5px; margin-bottom: 5px; }
         </style>
