--- a/src/www/instant_camera/remote.html
+++ b/src/www/instant_camera/remote.html
@@ -7,7 +7,7 @@
         body {width: 100%;}
         canvas {display: none;}
     </style>
-    <title>Instant Camera - Recorder</title>
+    <title>Instant Camera - Remote</title>
     <script src="/socket.io/socket.io.js"> </script>
     <script>
 
@@ -58,7 +58,7 @@
 </head>
 <body>
     <video  id="video" width="240" height="320" autoplay> </video>
-    <p      id="error">Click on the video to send a snapshot to the remote screen</p>
+    <p      id="error">Click on the video to send a snapshot to the receiving screen</p>
     <canvas id="canvas" width="240" height="320"> </canvas>
 </body>
 </html>
