--- a/src/www/remote_rotation/receiver.html
+++ b/src/www/remote_rotation/receiver.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-        <title>Orentation - Screen</title>
+        <title>Orentation - Receiver</title>
         <style>
             #container {
                 width: 400px;
