--- a/src/www/remote_rotation/remote.html
+++ b/src/www/remote_rotation/remote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-    <title>Remote Rotation - Recorder</title>
+    <title>Remote Rotation - Remote</title>
     <script src="/socket.io/socket.io.js"> </script>
     <script>
         var socket = new io.Socket(null, {port: 8080, rememberTransport: true});
@@ -32,7 +32,7 @@
 </head>
 <body>
     <h1>Remote Rotation</h1>
-    <p>Rotate the device to control the image on the remote screen</p>
+    <p>Rotate the device to control the image on the receiving screen</p>
     <div id="status"> </div>
 </body>
 </html>
