Added black background color for nicer switch between videos

--- a/src/www/tv_remote/receiver.html
+++ b/src/www/tv_remote/receiver.html
@@ -9,6 +9,9 @@
                 margin:  5px 0 0 0;
                 padding:  0;
             }
+            video {
+                background-color: #000;
+            }
         </style>
         <script src="/socket.io/socket.io.js"> </script>
         <script>
