--- a/src/www/chat/index.html
+++ b/src/www/chat/index.html
@@ -5,35 +5,36 @@
         <meta name="viewport" content="width=device-width, maximum-scale=1.0">
         <title>Simple Chat</title>
         <style>
-            div {margin-top: 100px; margin-left: auto; margin-right: auto; width: 50%;}
             textarea {padding:  5px 5px 5px 5px;}
+            #alive {color:#999;}
         </style>
-        <script src="/socket.io/socket.io.js"></script>
+
         <script>
-            var socket = new io.Socket(null, {port: 8080, rememberTransport: true});
-            socket.connect();
+            var ws = new WebSocket( 'ws://' + window.location.host );
+            ws.onmessage = function ( event ) {
 
-            socket.on('message', function( obj ){
-
-                if ( typeof obj !== 'object' ) {
-                    var dataObj = JSON.parse(obj);
+                if ( typeof event.data !== 'object' ) {
+                    var dataObj = JSON.parse( event.data );
                     if ( dataObj.demo.type === "chat" ) {
                         var recEl = document.getElementById("rec");
                         recEl.value = dataObj.demo.message;
+                    } else if ( dataObj.demo.type === "info" ) {
+                        document.getElementById("alive").innerHTML = 'Connected';
                     }
                 }
-            });
+            };
 
             var send = function (ev) {
                 var chat = {"demo" : {
                     "type"  : "chat",
                     "message" : ev.value
                 }};
-                socket.send(JSON.stringify(chat));
+                ws.send( JSON.stringify(chat) );
             };
         </script>
     </head>
     <body>
-        <textarea id="rec" rows="20" cols="80" onkeyup="send(this);"></textarea>
+        <textarea id="rec" rows="20" cols="80" onkeyup="send( this );"> </textarea>
+        <div id="alive"> </div>
     </body>
 </html>
