--- a/src/www/tv_remote/receiver.html
+++ b/src/www/tv_remote/receiver.html
@@ -13,10 +13,9 @@
                 background-color: #000;
             }
         </style>
-        <script src="/socket.io/socket.io.js"> </script>
         <script>
-            var socket = new io.Socket(null, {port: 8080, rememberTransport: true});
-            socket.connect();
+
+            var ws = new WebSocket( 'ws://' + window.location.host );
 
             var videos = [
                 {url : 'http://www.archive.org/download/woody_woodpecker_pantry_panic/woody_woodpecker_pantry_panic.ogv', title : 'Woody Woodpecker in Pantry Panic'},
@@ -57,11 +56,10 @@
 
             };
 
+            ws.onmessage = function( obj ){
 
-            socket.on('message', function( obj ){
-
-                if ( typeof obj !== 'object' ) {
-                    var dataObj = JSON.parse(obj);
+                if ( typeof obj.data !== 'object' ) {
+                    var dataObj = JSON.parse( obj.data );
 
                     // Click on the remote
 
@@ -124,7 +122,7 @@
 
                 }
 
-            });
+            };
 
             window.addEventListener('DOMContentLoaded', load, false);
         </script>
