--- a/src/www/tv_remote/remote.html
+++ b/src/www/tv_remote/remote.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
     <title>TV Remote - Remote</title>
-    <script src="/socket.io/socket.io.js"> </script>
     <script>
-        var socket = new io.Socket(null, {port: 8080, rememberTransport: true});
-        socket.connect();
 
+        var ws = new WebSocket( 'ws://' + window.location.host );
         var el;
 
 
@@ -118,6 +116,8 @@
         // Handle volume up / down and next / previous video
 
         var touchAction = function( ev ) {
+
+
             touch.end(ev, function (obj) {
                 el.innerHTML = 'Touch: ' + obj.direction;
 
@@ -141,7 +141,7 @@
                     action.demo.type = "tv_right"
                 }
 
-                socket.send(JSON.stringify(action));
+                ws.send( JSON.stringify( action ) );
             });
         };
 
@@ -154,7 +154,7 @@
             }};
             el.innerHTML = 'Click';
 
-            socket.send(JSON.stringify(action));
+            ws.send( JSON.stringify( action ) );
         };
 
 
