--- a/src/www/instant_camera/receiver.html
+++ b/src/www/instant_camera/receiver.html
@@ -7,10 +7,8 @@
         <style>
             img { float: left; margin-right: 5px; margin-bottom: 5px; }
         </style>
-        <script src="/socket.io/socket.io.js"> </script>
         <script>
-            var socket = new io.Socket(null, {port: 8080, rememberTransport: true});
-            socket.connect();
+            var ws = new WebSocket( 'ws://' + window.location.host );
 
             var el;
 
@@ -18,11 +16,11 @@
                 el = document.getElementById('container');
             };
 
-            socket.on('message', function( obj ){
+            ws.onmessage = function( obj ){
 
-                if ( typeof obj !== 'object' ) {
+                if ( typeof obj.data !== 'object' ) {
 
-                    var dataObj = JSON.parse(obj);
+                    var dataObj = JSON.parse(obj.data);
 
                     if ( dataObj.demo.type === "device" ) {
                         var img = document.createElement('img');
@@ -32,7 +30,7 @@
 
                 }
 
-            });
+            };
 
             window.addEventListener('DOMContentLoaded', load, false);
         </script>
