Added reference to TV remote demo

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -48,5 +48,17 @@
         <p>
             <a href="remote_rotation/remote.html">Open recorder</a> - <a href="remote_rotation/receiver.html">Open screen</a>
         </p>
+
+        <hr>
+
+        <h2>TV Remote</h2>
+        <p>
+            A demo using touch events on a device to track direction of a swipe and apply those to control a remote video
+            player. Swipe right switches to next video, swipe left to previous video, swipe up adjusts sound up, swipe down
+            adjusts sound down. Click (tap) toggles play / pause of the video.
+        </p>
+        <p>
+            <a href="tv_remote/remote.html">Open remote</a> - <a href="tv_remote/receiver.html">Open player</a>
+        </p>
     </body>
 </html>
