--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,16 +1,20 @@
 <!document html>
-<html>
+    <html>
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, maximum-scale=1.0">
         <title>"HTML5" Clients Interacting Demos</title>
     </head>
+
     <body>
         <h1>"HTML5" Clients Interacting Demos</h1>
         <p>
-            These are small demos using two or more clients interacting with each other in real time. Most demos has a recorder
+            These are small demos using two or more clients interacting with each other in real time. Most demos has a
+            recorder
             and a screen. The recorder are used as a "remote control" to control whats going on on the remote "screen".
-            These demos does show some new and experimental parts in browsers using native implementations so each demo might
+            These demos does show some new and experimental parts in browsers using native implementations so each demo
+            might
             require different browser versions / experimental browser builds.
         </p>
         <p>
@@ -30,12 +34,14 @@
 
         <h2>Instant Camera</h2>
         <p>
-            A demo using the Device API for accessing the camera on a device and instantly projecting snapshot images from
+            A demo using the Device API for accessing the camera on a device and instantly projecting snapshot images
+            from
             the recording client to a screen client. The snapshot images are transferred between the clients by a
             WebSocket connection.
         </p>
         <p>
-            <a href="instant_camera/remote.html">Open recorder</a> - <a href="instant_camera/receiver.html">Open screen</a>
+            <a href="instant_camera/remote.html">Open recorder</a> - <a href="instant_camera/receiver.html">Open
+                screen</a>
         </p>
 
         <hr>
@@ -46,19 +52,23 @@
             a image in a screen client. Communication between the clients are done with WebSockets.
         </p>
         <p>
-            <a href="remote_rotation/remote.html">Open recorder</a> - <a href="remote_rotation/receiver.html">Open screen</a>
+            <a href="remote_rotation/remote.html">Open recorder</a> - <a href="remote_rotation/receiver.html">Open
+                screen</a>
         </p>
 
         <hr>
 
         <h2>TV Remote</h2>
         <p>
-            A demo using touch events on a device to track direction of a swipe and apply those to control a remote video
-            player. Swipe right switches to next video, swipe left to previous video, swipe up adjusts sound up, swipe down
+            A demo using touch events on a device to track direction of a swipe and apply those to control a remote
+            video
+            player. Swipe right switches to next video, swipe left to previous video, swipe up adjusts sound up, swipe
+            down
             adjusts sound down. Click (tap) toggles play / pause of the video.
         </p>
         <p>
             <a href="tv_remote/remote.html">Open remote</a> - <a href="tv_remote/receiver.html">Open player</a>
         </p>
     </body>
-</html>
+
+    </html>
